style.css
*{
    box-sizing: border-box;
    margin:0px;
    padding:0px;
}

.chat-container{
    height: 100vh;
    background: peru;
    
    /*since we need left-view and right-view side by side*/
    display: flex; 
}
.left-view{
    height: 100%;
    width: 25%;
    background: purple;
}
.right-view{
    width: 75%;
    height: 100%;
    background:#34495e;
    font-family: 'Roboto', sans-serif; 
}
.chat-window{
    /* chat window  take height 90% of right view*/
    height: 90%;

    /*to create space between boundary and chat window content.*/
    padding: 10px;

}
.chat{
    /*font color of chat text.*/
    color: white;
    min-height: 30px;
    margin-top: 15px;
    border-radius: 10px;
    padding: 5px;
    margin-top:5px;
}
.left{
    background: #2c3e50;
}
.right{
    background: #7b59c0;
}
.join{
    background:  #3498db;
    width: 80%;

    /*so that it is in center*/
    margin: auto;
    margin-top: 15px;

    /*START: bringing join chat text to center*/
    display: flex;
    justify-content: center;
    align-items:center;
    /*end: bringing join chat text to center*/
}
.leave{
    background: #e74c3c;
    width: 80%;

    /*so that it is in center*/
    margin: auto;
    margin-top: 15px;

    /*START: bringing join chat text to center*/
    display: flex;
    justify-content: center;
    align-items:center;
    /*end: bringing join chat text to center*/
}
.chat-input{
    /*chat input to take 10% height of right view.*/
    height: 10%;
    background: #34495e;
    display: flex;
    
    /*to aling input box (.chat-input input) to center.*/
    justify-content: center; /* align horizontally.*/
    align-items: center; /* align vertically*/

}
.chat-input input{
    height: 70%;
    width: 80%;
    background: #2c3e50;
    outline: none;
    border: none;
    border-radius: 10px;
    font-size : 1.2rem;

    /*so that text doesn't touch input boundaries.*/
    padding: 10px;

    /* chat font color.*/
    color: white;
}

